[package]
name = "this-wallet"
version = "0.1.1"
authors = ["suiGn <admin@neurons.me>"]
edition = "2021"
description = "This wallet RPC proxy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neurons-me/this.audio"
homepage = "https://neurons.me"
readme = "README.md"
keywords = ["wallet", "rpc", "proxy"]
categories = ["web-programming", "network-programming"]

[dependencies]
actix-web = "4.8"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dotenvy = "0.15"
once_cell = "1.19"
governor = { version = "0.6", default-features = false, features = ["std", "dashmap", "jitter", "quanta"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time"] }
num_cpus = "1.16"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
tera = "1.19"
actix-files = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "s"

[[bin]]
name = "this-wallet"
path = "src/main.rs"